# transformer-from-scratch

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
exercises/attention_block/: README.md  attention_block.py  socratic_prompt.md
exercises/attention_block/solution/hidden/: reference_attention_block.py
exercises/attention_mechanism/: README.md  attention.py  socratic_prompt.md
exercises/attention_mechanism/solution/hidden/: reference_attention.py  socratic_prompt.md
exercises/attention_mechanism/tests/: test_attention.py
exercises/mlp_layer/: README.md  mlp.py  socratic_prompt.md
exercises/mlp_layer/solution/hidden/: reference_mlp.py
tests/: test_attention_block.py  test_attention_mechanism.py  test_mlp.py
