[project]
name = "transformer-from-scratch"
description = "Transformer from Scratch"
authors = [{ name = "Benjamin Warner", email = "me@benjaminwarner.dev" }]
readme = "README.md"
requires-python = ">=3.12.0"
dynamic = ["version"]
dependencies = [
    "numpy>=2.2.3",
    "pytest>=7.2.1,<9",
    "torch>=2.5.1,<2.7"
]

[build-system]
requires = ["setuptools>=75.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
gpu = ["torch>=2.5.1,<2.7", "setuptools>=75.8.0", "packaging"]
cpu = ["torch>=2.5.1,<2.7"]
flash = ["flash-attn>=2.7.4"]

[tool.setuptools]
packages = ["from_scratch"]
package-dir = {"from_scratch" = "exercises"}

[tool.setuptools.dynamic]
version = { attr = "from_scratch.__version__" }

[tool.uv]
package = true
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4post1"
requires-dist = ["torch", "einops"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-gpu", extra = "gpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 140
src = ["exercises"]
